PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.6.17

- Core:
  . Fixed bug #70957 (self::class can not be resolved with reflection for
    abstract class). (Laruence)
  . Fixed bug #70944 (try{ } finally{} can create infinite chains of
    exceptions). (Laruence)

- Mysqlnd:
  . Fixed bug #68077 (LOAD DATA LOCAL INFILE / open_basedir restriction).
    (Laruence)

- SOAP:
  . Fixed bug #70900 (SoapClient systematic out of memory error). (Dmitry)

26 Nov 2015, PHP 5.6.16

- Core:
  . Fixed bug #70828 (php-fpm 5.6 with opcache crashes when referencing a
    non-existent constant). (Laruence)
  . Fixed bug #70748 (Segfault in ini_lex () at Zend/zend_ini_scanner.l).
    (Laruence)

- Mysqlnd:
  . Fixed bug #68344 (MySQLi does not provide way to disable peer certificate
    validation) by introducing MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT
	connection flag. (Andrey)

- OCI8:
  . Fixed bug #68298 (OCI int overflow) (Senthil).

- PDO_DBlib:
  . Fixed bug #69757 (Segmentation fault on nextRowset).
    (miracle at rpz dot name)

- SOAP:
  . Fixed bug #70875 (Segmentation fault if wsdl has no targetNamespace
    attribute). (Matteo)

- SPL:
  . Fixed bug #70852 Segfault getting NULL offset of an ArrayObject.
    (Reeze Xia)

29 Oct 2015, PHP 5.6.15

- Core:
  . Fixed bug #70681 (Segfault when binding $this of internal instance method
    to null). (Nikita)
  . Fixed bug #70685 (Segfault for getClosure() internal method rebind with
    invalid $this). (Nikita)

- Date:
  . Fixed bug #70619 (DateTimeImmutable segfault). (Laruence)

- Mcrypt:
  . Fixed bug #70625 (mcrypt_encrypt() won't return data when no IV was
    specified under RC4). (Nikita)

- Mysqlnd:
  . Fixed bug #70384 (mysqli_real_query():Unknown type 245 sent by the server).
   (Andrey)
  . Fixed bug #70572 segfault in mysqlnd_connect. (Andrey, Remi)

- Opcache: