@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 2015, PHP 5.6.17
 
 - Core:
+  . Fixed bug #70958 (Invalid opcode while using ::class as trait method
+    paramater default value). (Laruence)
   . Fixed bug #70957 (self::class can not be resolved with reflection for
     abstract class). (Laruence)
   . Fixed bug #70944 (try{ } finally{} can create infinite chains of
